# sahabat_ws

./: .gitignore  99-sahabat-robot.rules  =3.0.0  MAPPING_GUIDE.md  NAV2_PARAMS_REFERENCE.txt  NAVIGATION_TESTING_GUIDE.md  NAV_TEST.md  NAV_TEST_QUICK.md  OBSTACLE_DETECTION.md  OFFLINE_MAPPING_GUIDE.md  PI_LLM_INTEGRATION.md  PROJECT_STATUS.md  PURE_ZED_LOCALIZATION.md  QUICKSTART.md  ROBOT_SPINNING_FIX.md  RTABMAP_SETUP.md  RTABMAP_STREAMING_GUIDE.md  SENSOR_FUSION_GUIDE.md  SLAM_TOOLBOX_GUIDE.md  VELOCITY_FIX.md  WAYPOINT_PATROL_GUIDE.md  ZED_URDF_INTEGRATION.md  ZLAC8015D_SETUP.md  check_rtabmap.sh  frames_2025-10-20_15.52.28.gv  frames_2025-10-20_16.04.07.gv  frames_2025-10-20_16.06.44.gv  frames_2025-10-20_16.09.44.gv  frames_2026-01-04_08.26.41.gv  frames_cli.pdf.gv  test_navigation_setup.sh  test_tf_tree.sh
src/shbat_pkg/: package.xml  setup.py
src/shbat_pkg/config/: amcl.yaml  ekf.yaml  exhibit_routes.yaml  localization__params_online_async.yaml  mapper_params_online_async.yaml  nav2_odom_only.yaml  nav2_params.yaml  nav2_params_mapping.yaml  nav2_params_odom.yaml  patrol_waypoints.yaml  rtabmap_params.yaml  scan_filter.yaml  slam_toolbox.yaml  slam_toolbox_localization.yaml  zed_depth_to_scan.yaml  zed_pos_tracking_override.yaml
src/shbat_pkg/launch/: localization_patrol_launch.py  nav2_test_launch.py  sahabat_launch.py  sahabat_manual.launch.py  sahabat_mapping.launch.py  sahabat_nav.launch.py  sahabat_navigation_test.launch.py  sahabat_rtabmap.launch.py  sahabat_rtabmap_debug.launch.py  sahabat_rtabmap_from_bag.launch.py  sahabat_rtabmap_zed_only.launch.py  sahabat_sensor_fusion_only.launch.py  sahabat_zed_record.launch.py  slam_nav_launch.py  test_nav_odom_only.launch.py  zed_odom_test.launch.py
src/shbat_pkg/map/: map_save.pgm  map_save.yaml  map_serial.data
src/shbat_pkg/rviz/: nav2_test.rviz  navigation_test.rviz  rtabmap.rviz  slam_nav.rviz  zed_odom_test.rviz  zed_rtabmap.rviz
src/shbat_pkg/scripts/: check_odom.sh  robot_client.py
src/shbat_pkg/shbat_pkg/: api_bridge.py  base_controller.py  exhibit_navigator.py  joy2cmd.py  kalman_filter.py  pose_saver_auto.py  save_current_pose.py  scan_filter.py  test_motor.py  waypoint_collector.py  waypoint_manager.py  waypoint_panel.py  waypoint_patrol.py
(+5 files in other folders)
