<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>shbat_pkg</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="sahabat@todo.todo">sahabat</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  
  <depend>rclcpp</depend>
  <depend>rclpy</depend>

  <depend>joint_state_publisher</depend>
  <depend>robot_state_publisher</depend>
  <depend>tf2_ros</depend>
  <depend>slam_toolbox</depend>
  <depend>wheeltec_n100_imu</depend>
  <depend>oradar_lidar</depend>
  <depend>joy</depend>


<depend>nav2_amcl</depend>
<depend>nav2_msgs</depend>
<depend>nav2_behaviors</depend>
<depend>nav2_navfn_planner</depend>
<depend>nav2_behavior_tree</depend>
<depend>nav2_planner</depend>
<depend>nav2_bringup</depend>
<depend>nav2_regulated_pure_pursuit_controller</depend>
<depend>nav2_bt_navigator</depend>
<depend>nav2_rotation_shim_controller</depend>
<depend>nav2_collision_monitor</depend>
<depend>nav2_rviz_plugins</depend>
<depend>nav2_common</depend>
<depend>nav2_simple_commander</depend>
<depend>nav2_constrained_smoother</depend>
<depend>nav2_smac_planner</depend>
<depend>nav2_controller</depend>
<depend>nav2_smoother</depend>
<depend>nav2_core</depend>
<depend>nav2_theta_star_planner</depend>
<depend>nav2_costmap_2d</depend>
<depend>nav2_util</depend>
<depend>nav_2d_msgs</depend>
<depend>nav2_velocity_smoother</depend>
<depend>nav_2d_utils</depend>
<depend>nav2_voxel_grid</depend>
<depend>nav2_dwb_controller</depend>
<depend>nav2_waypoint_follower</depend>
<depend>nav2_lifecycle_manager</depend>
<depend>navigation2</depend>
<depend>nav2_map_server</depend>
<depend>nav_msgs</depend>
<depend>geometry_msgs</depend>
<depend>std_msgs</depend>

<!-- Motor driver dependencies -->
<exec_depend>python3-numpy</exec_depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
